--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,5 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+languageCode = "es-es"
+title = "Functional Programming"
 theme = "reveal-hugo"
 
 [markup.goldmark.renderer]
