--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 languageCode = "es-es"
 title = "Functional Programming"
-theme = "reveal-hugo"
+theme = "https://github.com/dzello/reveal-hugo"
 
 [markup.goldmark.renderer]
 unsafe = true
