--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 languageCode = "es-es"
 title = "Functional Programming"
-theme = ["github.com/dzello/reveal-hugo"]
+theme = "reveal-hugo"
 
 [markup.goldmark.renderer]
 unsafe = true
@@ -9,7 +9,3 @@ unsafe = true
 baseName = "index"
 mediaType = "text/html"
 isHTML = true
-
-[module]
-[[module.imports]]
-    path = 'github.com/dzello/reveal-hugo'
